selene/tests/validate_config/not_found/rich_output.txt
error: failed to find standard library: i_dont_exist
  ┌─ selene.toml:1:1
  │
1 │ std = "i_dont_exist"
  │ ^^^^^^^^^^^^^^^^^^^^

